--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: shop
-description: FlutterShop is a premium E-commerce UI kit that you can use to build various e-commerce apps using Flutter that works on both Android & iOS. This kit contains 100+ nicely crafted minimal screens that cover everything you need for your shop app.
+name: cleanova
+description: Cleanova
 
 publish_to: "none"
 
@@ -17,15 +17,14 @@ dependencies:
   form_field_validator: ^1.1.0
   cached_network_image: ^3.2.0
   flutter_rating_bar: ^4.0.1
-  flutter_widget_from_html_core: ^0.15.1
+  flutter_widget_from_html_core: ^0.17.0
   animations: ^2.0.11
   url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
